--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -18,5 +18,6 @@
     "gitlens.codeLens.enabled": false,
     "workbench.editorAssociations": {
         "*.ipynb": "jupyter.notebook.ipynb"
-    }
+    },
+    "editor.minimap.enabled": false
 }
