--- a/config/terminator/config
+++ b/config/terminator/config
@@ -1,4 +1,5 @@
 [global_config]
+  suppress_multiple_term_dialog = True
 [keybindings]
   switch_to_tab_1 = <Primary>1
   switch_to_tab_2 = <Primary>2
@@ -24,4 +25,68 @@
     [[[child1]]]
       type = Terminal
       parent = window0
+      directory = ""
+      command = ""
+  [[rr]]
+    [[[child0]]]
+      type = Window
+      parent = ""
+      order = 0
+      position = 1992:27
+      maximised = True
+      fullscreen = False
+      size = 1848, 1016
+      title = /bin/bash
+      last_active_term = ad938fb5-f352-4211-bc7e-14140db2effb
+      last_active_window = True
+    [[[child1]]]
+      type = HPaned
+      parent = child0
+      order = 0
+      position = 917
+      ratio = 0.49755832881172
+    [[[child2]]]
+      type = VPaned
+      parent = child1
+      order = 0
+      position = 502
+      ratio = 0.49653808110781406
+    [[[terminal3]]]
+      type = Terminal
+      parent = child2
+      order = 0
+      profile = default
+      uuid = ad938fb5-f352-4211-bc7e-14140db2effb
+      command = cd ~/dev/radreport/radreport-frontend; npm start; bash
+      directory = ""
+    [[[terminal4]]]
+      type = Terminal
+      parent = child2
+      order = 1
+      profile = default
+      uuid = 1f59791d-15ca-4145-b846-5b2975720869
+      directory = ""
+      command = cd ~/dev/radreport/radreport-backend; venv; flask run; bash
+    [[[child5]]]
+      type = VPaned
+      parent = child1
+      order = 1
+      position = 502
+      ratio = 0.49653808110781406
+    [[[terminal6]]]
+      type = Terminal
+      parent = child5
+      order = 0
+      profile = default
+      uuid = 738a995c-1125-400d-bbf9-80da27c28278
+      command = cd ~/dev/radreport/radreport-backend; venv; jupyter-lab; bash
+      directory = ""
+    [[[terminal7]]]
+      type = Terminal
+      parent = child5
+      order = 1
+      profile = default
+      uuid = 0b76cefc-33b0-4b1c-9df2-b3c19c3d74ce
+      directory = ""
+      command = cd ~/dev/radreport; bash
 [plugins]
