--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -17,7 +17,11 @@
     // Extension settings
     "gitlens.codeLens.enabled": false,
     "workbench.editorAssociations": {
-        "*.ipynb": "jupyter.notebook.ipynb"
+        "*.ipynb": "jupyter-notebook"
     },
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "notebook.cellToolbarLocation": {
+        "default": "right",
+        "jupyter-notebook": "left"
+    }
 }
