--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -1,6 +1,7 @@
 {
     // General settings
     "git.autofetch": true,
+    // Theme
     "workbench.iconTheme": "material-icon-theme",
     "workbench.colorTheme": "Dracula",
     // Eliminate those pesky Windows line endings
@@ -24,4 +25,53 @@
         "default": "right",
         "jupyter-notebook": "left"
     }
+    // LaTeX Workshop
+    "[latex]": {
+        "editor.formatOnSave": false,
+    },
+    "latex-workshop.latex.outDir": "./build",
+    "latex-workshop.view.pdf.viewer": "tab",
+    "editor.tokenColorCustomizations": {
+        "textMateRules": [
+            {
+                "scope": [
+                    "support.class.math.block.environment.latex",
+                ],
+                "settings": {
+                    "foreground": "#6affff"
+                }
+            }
+        ]
+    },
+    "latex-workshop.latex.recipes": [
+        {
+            "name": "pdfLaTeX",
+            "tools": [
+                "pdflatex"
+            ],
+        },
+        {
+            "name": "pdflatex ➞ bibtex ➞ pdflatex`×2",
+            "tools": [
+                "pdflatex",
+                "bibtex",
+                "pdflatex",
+                "pdflatex"
+            ]
+        }
+    ],
+    "latex-workshop.latex.tools": [
+        {
+            "name": "pdflatex",
+            "command": "pdflatex",
+            "args": [
+                "-synctex=1",
+                "-interaction=nonstopmode",
+                "-file-line-error",
+                "-aux-directory=build",
+                "-output-directory=build",
+                "%DOC%"
+            ]
+        }
+    ],
 }
