--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -131,7 +131,14 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 ## Dracula theme
 set -g @plugin 'dracula/tmux' 
 # Options
+set -g @dracula-show-time true
 set -g @dracula-day-month true
 set -g @dracula-show-fahrenheit false
+
+# Other colours
+# source ~/dotfiles/colours/dracula.sh
+
+# set -g window-active-style "bg=${background}"
+# set -g window-style "bg=${background}"
 
 run '~/.tmux/plugins/tpm/tpm'
