--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -136,9 +136,9 @@ set -g @dracula-day-month true
 set -g @dracula-show-fahrenheit false
 
 # Other colours
-# source ~/dotfiles/colours/dracula.sh
+background="#282a36"
 
-# set -g window-active-style "bg=${background}"
-# set -g window-style "bg=${background}"
+set -g window-active-style "bg=${background}"
+set -g window-style "bg=${background}"
 
 run '~/.tmux/plugins/tpm/tpm'
