--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -121,6 +121,8 @@ bind D if -F '#{session_many_attached}' \
 # # Hide status bar on demand
 bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
 
+# Reload congi
+bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf"
 
 # ============================
 # ===       Plugins        ===
@@ -131,14 +133,16 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 ## Dracula theme
 set -g @plugin 'dracula/tmux' 
 # Options
-set -g @dracula-show-time true
+set -g @dracula-show-battery false
 set -g @dracula-day-month true
 set -g @dracula-show-fahrenheit false
+set -g @dracula-show-timezone false
+set -g @dracula-show-network false
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-sep ⠀
+set -g @dracula-show-right-sep ⠀ 
+set -g @dracula-cpu-usage true
+set -g @dracula-ram-usage true
 
-# Other colours
-background="#282a36"
-
-set -g window-active-style "bg=${background}"
-set -g window-style "bg=${background}"
 
 run '~/.tmux/plugins/tpm/tpm'
