--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,15 +3,15 @@
 # ==========================
 
 set -g default-terminal "screen-256color"
-set -g history-limit 20000
-set -g buffer-limit 20
-set -sg escape-time 0
-set -g display-time 1500
-set -g remain-on-exit off
-set -g repeat-time 300
-setw -g allow-rename off
-setw -g automatic-rename off
-setw -g aggressive-resize on
+# set -g history-limit 20000
+# set -g buffer-limit 20
+# set -sg escape-time 0
+# set -g display-time 1500
+# set -g remain-on-exit off
+# set -g repeat-time 300
+# setw -g allow-rename off
+# setw -g automatic-rename off
+# setw -g aggressive-resize on
 
 # Change prefix key to C-a, easier to type, same to "screen"
 unbind C-b
@@ -118,31 +118,31 @@ bind D if -F '#{session_many_attached}' \
     'confirm-before -p "Detach other clients? (y/n)" "detach -a"' \
     'display "Session has only 1 client attached"'
 
-# # Hide status bar on demand
+# Hide status bar on demand
 bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
 
-# Reload congi
+# Reload config
 bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf"
 
 # ============================
 # ===       Plugins        ===
 # ============================
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-## Dracula theme
-set -g @plugin 'dracula/tmux' 
+## Modified dracula theme
+set -g @plugin 'LiamBlake/dracula-tmux' 
+
 # Options
-set -g @dracula-show-battery false
+set -g @dracula-plugins "cpu-usage ram-usage weather time"
+set -g @dracula-weather-colors "pink dark_gray"
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session
 set -g @dracula-day-month true
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-timezone false
-set -g @dracula-show-network false
 set -g @dracula-show-powerline true
-set -g @dracula-show-left-sep ⠀
-set -g @dracula-show-right-sep ⠀ 
-set -g @dracula-cpu-usage true
-set -g @dracula-ram-usage true
-
 
 run '~/.tmux/plugins/tpm/tpm'
