--- a/config/tmuxinator/radreport.yml
+++ b/config/tmuxinator/radreport.yml
@@ -54,3 +54,4 @@ windows:
         - cd radreport-backend && direnv exec . flask run
         - cd radreport-backend && direnv exec . jupyter lab
         - cd radreport-frontend && npm start
+        - cd ~/elasticsearch-7.13.2 && bin/elasticsearch
