--- a/config/tmuxinator/radreport.yml
+++ b/config/tmuxinator/radreport.yml
@@ -40,13 +40,16 @@ root: ~/dev/radreport
 # attach: false
 
 windows:
+  - editor:
+      panes:
+        - nvim
   - repo:
       layout: main-horizontal
       panes:
         - cd radreport-backend
         - git fetch && git status
   - servers:
-      layout: main-horizontal
+      layout: tiled
       # Synchronize all panes of this window, can be enabled before or after the pane commands run.
       # 'before' represents legacy functionality and will be deprecated in a future release, in favour of 'after'
       # synchronize: after
