--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@
 # ===  General settings  ===
 # ==========================
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set -g history-limit 20000
 set -g buffer-limit 20
 set -sg escape-time 0
