--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -102,7 +102,7 @@
   #multiplier: 3
 
 # Font configuration
-#font:
+font:
   # Normal (roman) font face
   normal:
     # Font family
@@ -114,7 +114,7 @@
     family: MesloLGS NF
 
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    style: Regular
 
   # Bold font face
   #bold:
