Move tmux status bar to top

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,6 +28,8 @@ setw -g pane-base-index 1
 # Enable mouse support
 set -g mouse on
 
+# Move status bar to top
+set-option -g status-position top
 
 # ==========================
 # ===   Key bindings     ===
