--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,9 @@
 # ===  General settings  ===
 # ==========================
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"                                                                        
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 set -g history-limit 20000
 set -g buffer-limit 20
 set -sg escape-time 0
@@ -101,7 +103,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'LiamBlake/dracula-tmux' 
 
 # Dracula options
-set -g @dracula-plugins "cpu-usage ram-usage weather time"
+set -g @dracula-plugins "cpu-usage ram-usage time"
 set -g @dracula-weather-colors "pink dark_gray"
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
