--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -77,4 +77,7 @@
     "[html]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
 }
