Use dracula/tmux for theme

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -96,10 +96,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-## Modified dracula theme
-set -g @plugin 'LiamBlake/dracula-tmux'
-
-# Dracula options
+## Dracula theme
+set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage ram-usage time"
 set -g @dracula-weather-colors "pink dark_gray"
 set -g @dracula-show-flags true
