More significant config changes

--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -81,4 +81,5 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "editor.fontSize": 15,
+    "vscode-neovim.neovimExecutablePaths.linux": "/usr/bin/nvim",
 }
