--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,8 +2,8 @@
 # ===  General settings  ===
 # ==========================
 
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",alacritty:RGB"
+set -g default-terminal "tmux-256color"
 
 set -g history-limit 20000
 set -g buffer-limit 20
