--- a/config/tmuxinator/testmatch.yml
+++ b/config/tmuxinator/testmatch.yml
@@ -31,21 +31,30 @@ root: ~/dev/testmatch
 # tmux_command: byobu
 
 # Specifies (by name or index) which window will be selected on project startup. If not set, the first window is used.
-# startup_window: editor
+startup_window: editor
 
 # Specifies (by index) which pane of the specified window will be selected on project startup. If not set, the first pane is used.
-# startup_pane: 1
+startup_pane: 1
 
 # Controls whether the tmux session should be attached to automatically. Defaults to true.
 # attach: false
 
 windows:
-  - development:
+  - editor:
+      layout: main-horizontal
+      panes:
+        - nvim
+  - repo:
       layout: tiled
       # Synchronize all panes of this window, can be enabled before or after the pane commands run.
       # 'before' represents legacy functionality and will be deprecated in a future release, in favour of 'after'
       # synchronize: after
       panes:
         - cd build
-        - venv
-        - code . && git fetch && git status
+        - source venv/bin/activate
+        - git fetch && git status
+  - testing:
+      layout: main-horizontal
+      panes:
+        - cd build/test/cpp
+        - source venv/bin/activate
