Remove oh-my-zsh, disable TS TeX highlighting

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,6 +30,12 @@ setw -g pane-base-index 1
 # Enable mouse support
 set -g mouse on
 
+# Move status bar to top
+set -g status-position top 
+
+# Prompt to rename window right after it's created
+set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
+
 # ==========================
 # ===   Key bindings     ===
 # ==========================
@@ -98,7 +104,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 ## Dracula theme
 set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "cpu-usage ram-usage time"
+set -g @dracula-plugins "weather time"
 set -g @dracula-weather-colors "pink dark_gray"
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
