--- a/config/i3/config
+++ b/config/i3/config
@@ -103,6 +103,9 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# Lock screen
+bindsym $mod+Shift+Escape exec i3lock
+
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
