--- a/config/git/config
+++ b/config/git/config
@@ -13,6 +13,7 @@
     cam = "commit -a -m"
     sc = "switch -c"
     cp = "cherry-pick"
+    f = "fetch"
 
 [user]
 	email = liamlemblake@gmail.com
