--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,7 +31,7 @@ setw -g pane-base-index 1
 set -g mouse on
 
 # Move status bar to top
-set -g status-position top 
+set -g status-position top
 
 # Prompt to rename window right after it's created
 set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
@@ -104,7 +104,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 ## Dracula theme
 set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "weather time"
+set -g @dracula-plugins "cpu-usage ram-usage battery time"
 set -g @dracula-weather-colors "pink dark_gray"
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
