--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -114,6 +114,10 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
+# Undercurl support
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
 # ============================
 # ===       Plugins        ===
 # ============================
@@ -121,6 +125,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'jabirali/tmux-tilish'
 
 ## Dracula theme
 set -g @plugin 'dracula/tmux'
@@ -132,5 +137,7 @@ set -g @dracula-day-month true
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-timezone false
 set -g @dracula-show-powerline true
+set -g @dracula-show-left-sep 
+set -g @dracula-show-right-sep 
 
 run '~/.tmux/plugins/tpm/tpm'
