feat: custom TMUX statusline

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,11 +30,21 @@ setw -g pane-base-index 1
 # Enable mouse support
 set -g mouse on
 
-# Move status bar to top
-set -g status-position top
-
 # Prompt to rename window right after it's created
 set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
+
+# ==========================
+# ===     Status bar     ===
+# ==========================
+
+source $DOTFILES/tmux/statusbar.sh
+
+# ==========================
+# ===       Style        ===
+# ==========================
+
+set-option -g pane-active-border-style fg=colour39
+set-option -g pane-border-style fg=colour241
 
 # ==========================
 # ===   Key bindings     ===
@@ -125,19 +135,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'jabirali/tmux-tilish'
 
-## Dracula theme
-set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "cpu-usage ram-usage battery time"
-set -g @dracula-weather-colors "pink dark_gray"
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon session
-set -g @dracula-day-month true
-set -g @dracula-show-fahrenheit false
-set -g @dracula-show-timezone false
-set -g @dracula-show-powerline true
-set -g @dracula-show-left-sep 
-set -g @dracula-show-right-sep 
+# Monitoring
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
+# WARN: Always keep this line at the bottom of this file
 run '~/.tmux/plugins/tpm/tpm'
