Refactor neovim plugin config structure

--- a/config/i3status-rust/config.toml
+++ b/config/i3status-rust/config.toml
@@ -2,9 +2,8 @@ theme = "plain"
 icons = "awesome"
 
 [[block]]
-block = "music"
-player = "spotify"
-buttons = ["play", "next"]
+block = "sound"
+step_width = 3
 
 [[block]]
 block = "memory"
