fix[tmux]: Swap order of monitor and time in statusline

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,6 +38,7 @@ set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window 
 # ==========================
 
 source $DOTFILES/tmux/statusbar.sh
+set -g status-position top
 
 # ==========================
 # ===       Style        ===
@@ -135,6 +136,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'jabirali/tmux-tilish'
 
 # Monitoring
 set -g @plugin 'tmux-plugins/tmux-battery'
