--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,7 +37,7 @@ set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window 
 # ===     Status bar     ===
 # ==========================
 
-source $DOTFILES/tmux/statusbar.sh
+source $DOTFILES/tmux/statusline.sh
 set -g status-position top
 
 # ==========================
@@ -47,6 +47,11 @@ set -g status-position top
 set-option -g pane-active-border-style fg=colour39
 set-option -g pane-border-style fg=colour241
 
+# Undercurl support
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
+
 # ==========================
 # ===   Key bindings     ===
 # ==========================
@@ -54,27 +59,7 @@ set-option -g pane-border-style fg=colour241
 # Unbind default key bindings, we're going to override
 unbind "\$" # rename-session
 unbind ,    # rename-window
-# unbind %    # split-window -h
-# unbind '"'  # split-window
-# #unbind }    # swap-pane -D
-# unbind {    # swap-pane -U
-# unbind [    # paste-buffer
-# unbind ]
-# unbind "'"  # select-window
-# unbind n    # next-window
-# unbind p    # previous-window
-# unbind l    # last-window
-# unbind M-n  # next window with alert
-# unbind M-p  # next window with alert
-# unbind o    # focus thru panes
 unbind &    # kill-window
-# unbind "#"  # list-buffer
-# unbind =    # choose-buffer
-# unbind z    # zoom-pane
-# unbind M-Up  # resize 5 rows up
-# unbind M-Down # resize 5 rows down
-# unbind M-Right # resize 5 rows right
-# unbind M-Left # resize 5 rows left
 
 # Reload tmux configuration
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
@@ -124,10 +109,6 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
-
-# Undercurl support
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # ============================
 # ===       Plugins        ===
