feat[git]: sync alias to pull and push

--- a/config/git/config
+++ b/config/git/config
@@ -29,6 +29,7 @@
 	ul = "reset HEAD~"
 	stashall = "stash save --include-untracked"
 	update-url = "remote set-url origin"
+	sync = "!git pull && git push"
 
 	# When rebasing
 	rc = "rebase --continue"
