--- a/config/tmuxinator/masters.yml
+++ b/config/tmuxinator/masters.yml
@@ -31,32 +31,39 @@ root: ~/Dropbox/masters
 # tmux_command: byobu
 
 # Specifies (by name or index) which window will be selected on project startup. If not set, the first window is used.
-startup_window: editor
+startup_window: research
 
 # Specifies (by index) which pane of the specified window will be selected on project startup. If not set, the first pane is used.
-# startup_pane: 1
+startup_pane: 1
 
 # Controls whether the tmux session should be attached to automatically. Defaults to true.
 # attach: false
 
 windows:
-  - editor:
-      layout: main-vertical
+  - research:
+      layout: 5906,269x63,0,0[269x48,0,0,12,269x14,0,49,17]
       panes:
         - nvim
-  - julia:
-      layout: main-vertical
-      root: ~/Dropbox/masters/code
+        - cd code && julia
+  - sem:
+      layout: main-horizontal
+      root: ~/Dropbox/stochastic-epidemic-modelling
       panes:
         - nvim
-        - julia
+  - mai:
+      layout: main-horizontal
+      root: ~/Dropbox/mathematics-of-artificial-intelligence
+      panes:
+        - nvim
   - notes:
-      layout: main-horizontal
-      root: ~/Dropbox/notes
+      layout: 5906,269x63,0,0[269x48,0,0,12,269x14,0,49,17]
+      root: ~/Dropbox/notes 
       panes:
         - nvim
-  - background:
-      layout: main-horizontal
-      panes:
         # This script will automatically update the index files upon change
         - cd ~/Dropbox/notes && ./autoindex.sh
+  - dotfiles:
+      layout: main-horizontal
+      root: ~/dev/dotfiles 
+      panes:
+        - nvim
