--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -175,91 +175,91 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
-colors:
-  # Default colors
-  primary:
-    background: '0x2E3440'
-    foreground: '0xC8D0E0'
-
-  # Normal colors
-  normal:
-    black: '0x3B4252'
-    red: '0xBF616A'
-    green: '0xA3BE8C'
-    yellow: '0xEBCB8B'
-    blue: '0x81A1C1'
-    magenta: '0xB988B0'
-    cyan: '0x88C0D0'
-    white: '0xE5E9F0'
-
-  # Bright colors
-  bright:
-    black: '0x4C566A'
-    red: '0xBF616A'
-    green: '0xA3BE8C'
-    yellow: '0xEBCB8B'
-    blue: '0x81A1C1'
-    magenta: '0xB988B0'
-    cyan: '0x8FBCBB'
-    white: '0xECEFF4'
-
-  search:
-    matches:
-      foreground: '#81A1C1'
-      background: '#4C566A'
-    focused_match:
-      foreground: '#EBCB8B'
-      background: '#4C566A'
-
-    bar:
-      background: '#434C5E'
-      foreground: '#88C0D0'
-
-  hints:
-    start:
-      foreground: '#B988B0'
-      background: '#4C566A'
-
-    end:
-      foreground: '#81A1C1'
-      background: '#4C566A'
-
-  selection:
-    text: CellForeground
-    background: '#434C5E'
-
-# TokyoNight Alacritty Colors
+# Onenord colours
 # colors:
-#   # Default colors
 #   primary:
-#     background: "0x1f2335"
-#     foreground: "0xc0caf5"
+#     background: '0x2E3440'
+#     foreground: '0xC8D0E0'
 
 #   # Normal colors
 #   normal:
-#     black: "0x1D202F"
-#     red: "0xf7768e"
-#     green: "0x9ece6a"
-#     yellow: "0xe0af68"
-#     blue: "0x7aa2f7"
-#     magenta: "0xbb9af7"
-#     cyan: "0x7dcfff"
-#     white: "0xa9b1d6"
+#     black: '0x3B4252'
+#     red: '0xBF616A'
+#     green: '0xA3BE8C'
+#     yellow: '0xEBCB8B'
+#     blue: '0x81A1C1'
+#     magenta: '0xB988B0'
+#     cyan: '0x88C0D0'
+#     white: '0xE5E9F0'
 
 #   # Bright colors
 #   bright:
-#     black: "0x414868"
-#     red: "0xf7768e"
-#     green: "0x9ece6a"
-#     yellow: "0xe0af68"
-#     blue: "0x7aa2f7"
-#     magenta: "0xbb9af7"
-#     cyan: "0x7dcfff"
-#     white: "0xc0caf5"
+#     black: '0x4C566A'
+#     red: '0xBF616A'
+#     green: '0xA3BE8C'
+#     yellow: '0xEBCB8B'
+#     blue: '0x81A1C1'
+#     magenta: '0xB988B0'
+#     cyan: '0x8FBCBB'
+#     white: '0xECEFF4'
 
-#   indexed_colors:
-#     - { index: 16, color: "0xff9e64" }
-#     - { index: 17, color: "0xdb4b4b" }
+#   search:
+#     matches:
+#       foreground: '#81A1C1'
+#       background: '#4C566A'
+#     focused_match:
+#       foreground: '#EBCB8B'
+#       background: '#4C566A'
+
+#     bar:
+#       background: '#434C5E'
+#       foreground: '#88C0D0'
+
+#   hints:
+#     start:
+#       foreground: '#B988B0'
+#       background: '#4C566A'
+
+#     end:
+#       foreground: '#81A1C1'
+#       background: '#4C566A'
+
+#   selection:
+#     text: CellForeground
+#     background: '#434C5E'
+
+# TokyoNight Alacritty Colors
+colors:
+  # Default colors
+  primary:
+    background: "0x1f2335"
+    foreground: "0xc0caf5"
+
+  # Normal colors
+  normal:
+    black: "0x1D202F"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x7aa2f7"
+    magenta: "0xbb9af7"
+    cyan: "0x7dcfff"
+    white: "0xa9b1d6"
+
+  # Bright colors
+  bright:
+    black: "0x414868"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x7aa2f7"
+    magenta: "0xbb9af7"
+    cyan: "0x7dcfff"
+    white: "0xc0caf5"
+
+  indexed_colors:
+    - { index: 16, color: "0xff9e64" }
+    - { index: 17, color: "0xdb4b4b" }
 
 # # Colors (Tomorrow Night)
 # colors:
