--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -813,6 +813,8 @@ colors:
 # in the order they were defined in.
 key_bindings:
   - { key: F11, action: ToggleFullscreen }
+    # So Neovim understands Ctrl+Enter
+  - { key: Return,   mods: Control, chars: "\x1b[13;5u" }
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
