--- a/config/tmuxinator/masters.yml
+++ b/config/tmuxinator/masters.yml
@@ -51,18 +51,13 @@ windows:
       root: ~/Dropbox/stochastic-epidemic-modelling
       panes:
         - nvim
-  - mai:
-      layout: main-horizontal
-      root: ~/Dropbox/mathematics-of-artificial-intelligence
+  - notes:
+      layout: 5906,269x63,0,0[269x48,0,0,12,269x14,0,49,17]
+      root: ~/Dropbox/notes 
       panes:
         - nvim
-  # - notes:
-  #     layout: 5906,269x63,0,0[269x48,0,0,12,269x14,0,49,17]
-  #     root: ~/Dropbox/notes 
-  #     panes:
-  #       - nvim
-  #       # This script will automatically update the index files upon change
-  #       - cd ~/Dropbox/notes && ./autoindex.sh
+        # This script will automatically update the index files upon change
+        - cd ~/Dropbox/notes && ./autoindex.sh
   - dotfiles:
       layout: main-horizontal
       root: ~/dev/dotfiles
