--- a/config/tmuxinator/masters.yml
+++ b/config/tmuxinator/masters.yml
@@ -1,7 +1,7 @@
 # /home/liam/.config/tmuxinator/masters.yml
 
 name: masters
-# TODO: I think this path is MacOS specific...
+# This path is MacOS specific... there is no official desktop app for Box on Linux anyways.
 root: ~/Library/CloudStorage/Box-Box/masters
 
 # Optional tmux socket
@@ -41,11 +41,17 @@ startup_pane: 1
 # attach: false
 
 windows:
-  - research:
-      layout: 5906,269x63,0,0[269x48,0,0,12,269x14,0,49,17]
+  - writing:
+      layout: main-horizontal
+      panes: 
+        - nvim
+  - code:
+      layout: b95b,269x69,0,0[269x50,0,0,0,269x18,0,51{134x18,0,51,4,134x18,135,51,6}]
+      root: ~/Library/CloudStorage/Box-Box/masters/code
       panes:
         - nvim
-        - cd code && julia
+        - julia
+        - jupyter-lab
   - sem:
       layout: main-horizontal
       root: ~/Dropbox/stochastic-epidemic-modelling
@@ -55,9 +61,12 @@ windows:
       layout: 5906,269x63,0,0[269x48,0,0,12,269x14,0,49,17]
       root: ~/Dropbox/notes 
       panes:
-        - nvim
+        - editor:
+          # Automatically zoom on this panel on start
+          - tmux resize-pane -Z
+          - nvim
         # This script will automatically update the index files upon change
-        - cd ~/Dropbox/notes && ./autoindex.sh
+        - ./autoindex.sh
   - dotfiles:
       layout: main-horizontal
       root: ~/dev/dotfiles
