--- a/formatting/.latexindent-settings.yaml
+++ b/formatting/.latexindent-settings.yaml
@@ -145,7 +145,7 @@ lookForPreamble:
 preambleCommandsBeforeEnvironments: 0
 
 # default value of indentation
-defaultIndent: "\t"
+defaultIndent: "    "
 
 # remove trailing whitespace from all lines
 removeTrailingWhitespace:
