More minor changes of variety

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,12 @@
 # ==========================
 
 set -ga terminal-overrides ",alacritty:RGB"
-set -g default-terminal "tmux-256color"
+
+# TODO: Seems like this needs to depend on the operating system
+# This works fine for Windows and Linux
+# set -g default-terminal "tmux-256color"
+# This is needed for MacOS
+set-option default-terminal "screen-256color"
 
 set -g history-limit 20000
 set -g buffer-limit 20
@@ -117,7 +122,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'jabirali/tmux-tilish'
+# set -g @plugin 'jabirali/tmux-tilish'
 
 # Monitoring
 set -g @plugin 'tmux-plugins/tmux-battery'
