--- a/config/tmuxinator/masters.yml
+++ b/config/tmuxinator/masters.yml
@@ -66,14 +66,9 @@ windows:
       layout: 5906,269x63,0,0[269x48,0,0,12,269x14,0,49,17]
       root: ~/Dropbox/notes 
       panes:
-        - editor:
-          # Automatically zoom on this panel on start
-          - tmux resize-pane -Z
-          - nvim
-        # This script will automatically update the index files upon change
-        - ./autoindex.sh
+        - nvim
   - dotfiles:
       layout: main-horizontal
       root: ~/dev/dotfiles
       panes:
-        - 
+        - git fs
