--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,8 @@ set -ga terminal-overrides ",alacritty:RGB"
 # set -g default-terminal "tmux-256color"
 # This is needed for MacOS
 set-option default-terminal "screen-256color"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours
 
 set -g history-limit 20000
 set -g buffer-limit 20
