--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,8 @@ set -ga terminal-overrides ",alacritty:RGB"
 # This works fine for Windows and Linux
 # set -g default-terminal "tmux-256color"
 # This is needed for MacOS
-set-option default-terminal "screen-256color"
+set-option default-terminal "xterm-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours
 
